--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "antd": "^4.21.3",
     "axios": "^0.27.2",
     "next": "12.1.6",
+    "pg": "^8.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.3"
+    "recoil": "^0.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
+    "@types/node": "^18.0.0",
+    "@types/pg": "^8.6.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
