--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.21.3",
+    "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "pg": "^8.7.3",
