--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.21.3",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "pg": "^8.7.3",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.14",
