--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "recoil": "^0.7.3",
     "reflect-metadata": "^0.1.13",
     "sql-template-strings": "^2.2.2",
+    "twilio": "^3.77.3",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
